Bug 477430 - Cannot turn off Night Light after enabling HDR while it is active
Summary: Cannot turn off Night Light after enabling HDR while it is active
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: wayland-generic (other bugs)
Version First Reported In: git master
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Zamundaaa
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2023-11-23 17:54 UTC by hexchain
Modified: 2023-11-24 20:59 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description hexchain 2023-11-23 17:54:58 UTC
SUMMARY
If HDR is turned on while Night Light is active, there doesn't seem to be a way to deactivate it. Also, sometimes it looks like the color filter has been applied twice (more red-ish).

STEPS TO REPRODUCE
1. Activate Night Light
2. Turn on HDR

OBSERVED RESULT
The screen looks a bit redish, but turning off Night Light has no effect.

EXPECTED RESULT
Night Light should continue to function as usual.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.81.80
KDE Frameworks Version: 5.245.0
Qt Version: 6.6.0
Kernel Version: 6.6.2-arch1-1 (64-bit)
Graphics Platform: Wayland

KWin git master at 477102f6bcce675d549081ce6dae0bcceb6a7241
Comment 1 Bug Janitor Service 2023-11-23 18:54:36 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/4704
Comment 2 Zamundaaa 2023-11-24 20:59:06 UTC
Git commit 301e95b07c7ed44cdf68ee5d6cb100d37cd4238e by Xaver Hugl.
Committed on 24/11/2023 at 21:50.
Pushed by zamundaaa into branch 'master'.

backends/drm: unset GAMMA_LUT and CTM when enabling color management

M  +17   -13   src/backends/drm/drm_output.cpp
M  +5    -1    src/backends/drm/drm_pipeline.cpp
M  +1    -0    src/core/outputconfiguration.h
M  +2    -0    src/outputconfigurationstore.cpp
M  +7    -5    src/wayland/outputmanagement_v2.cpp

https://invent.kde.org/plasma/kwin/-/commit/301e95b07c7ed44cdf68ee5d6cb100d37cd4238e