backends/drm: unset GAMMA_LUT and CTM when enabling color management

BUG: 477430